--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -14,9 +14,15 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # Part to build example.
-FROM debian:buster-slim as builder
-RUN apt-get -y update && apt-get -y upgrade 
+FROM resin/armv7hf-debian:buster as builder
+RUN [ "cross-build-start" ]
+# Do not run apt-get upgrade/ will break cross compiling. Problems in in dependencies...
+RUN apt-get -y update && apt-get install apt-utils
 RUN apt-get -y install cmake g++ libopencv-dev libopencv-core-dev libopencv-highgui-dev make
+# RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 8EA63C9470BA0E595B75BBA2A92E492AC0B8C7EC && \
+#     apt-get install dirmngr software-properties-common && \
+#     add-apt-repository ppa:chrberger/libcluon && \
+#     apt-get update && apt-get install libcluon
 
 ADD . /opt/sources
 WORKDIR /opt/sources
@@ -24,10 +30,13 @@ RUN mkdir build && \
     cd build && \
     cmake -D CMAKE_BUILD_TYPE=Release -D CMAKE_INSTALL_PREFIX=/tmp .. && \
     make && make install
+RUN [ "cross-build-end" ]  
+
 
 # Part to deploy example.
-FROM debian:buster-slim
-RUN apt-get -y update && apt-get -y upgrade 
+FROM resin/armv7hf-debian:buster
+RUN [ "cross-build-start" ]
+RUN apt-get -y update 
 RUN apt-get -y install libopencv-dev
 
 WORKDIR /usr/bin
@@ -35,3 +44,4 @@ COPY --from=builder /tmp/bin/example .
 ENV NO_AT_BRIDGE=1
 ENTRYPOINT ["/usr/bin/example"]
 
+RUN [ "cross-build-end" ]  
