Tweaked the docker-compose file

--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -19,8 +19,10 @@ services:
           - device-camera-rpicamv2
         restart: always
         network_mode: "host"
+        working_dir: /opt/
         volumes:
           - "/dev/shm:/dev/shm"
+          - .:/opt/
         privileged: true
         ulimits:
           memlock:
