--- a/example/Dockerfile.amd64
+++ b/example/Dockerfile.amd64
@@ -16,8 +16,9 @@
 # Part to build example.
 FROM resin/amd64-debian:buster as builder
 # Do not use apt-get upgrade, something breaks...
-RUN apt-get update -y && apt-get install -y apt-utils #&& apt-get upgrade -y
-RUN apt-get install -y cmake g++ libopencv-dev libopencv-core-dev libopencv-highgui-dev make
+RUN apt-get update -y && apt-get install -y apt-utils 
+RUN apt-get install -y libopencv-dev libopencv-core-dev libopencv-highgui-dev
+RUN apt-get install -y cmake g++ make 
 
 ADD . /opt/sources
 WORKDIR /opt/sources
@@ -30,7 +31,7 @@ RUN mkdir build && \
 # Part to deploy example.
 FROM resin/amd64-debian:buster
 RUN apt-get -y update 
-RUN apt-get -y install libopencv-calib3d3.2 libopencv-contrib3.2 libopencv-core3.2 libopencv-features2d3.2 libopencv-flann3.2 libopencv-highgui3.2 libopencv-imgcodecs3.2 libopencv-imgproc3.2 libopencv-ml3.2 libopencv-objdetect3.2 libopencv-photo3.2 libopencv-shape3.2 libopencv-stitching3.2 libopencv-superres3.2 libopencv-video3.2 libopencv-videoio3.2 libopencv-videostab3.2 libopencv-viz3.2
+RUN apt-get install -y libopencv-dev libopencv-core-dev libopencv-highgui-dev
 
 WORKDIR /usr/bin
 COPY --from=builder /tmp/bin/example .
